<resources>
    <string name="AppName">Test</string>
    <string name="RegisterAndLoginPageLetsStart"><b>Давай начнем!</b></string>
    <string name="LoginPageTextViewLogin"><b>Вход</b></string>
    <string name="RegisterAndLoginPageText"><b>Создай своё путешествие</b></string>
    <string name="LoginFieldEmailText"><b>Почта</b></string>
    <string name="LoginFieldLoginText"><b>Имя пользователя</b></string>
    <string name="RegisterAndLoginPagePasswordFieldText"><b>Пароль</b></string>
    <string name="LoginPageForgotPass"><b>Забыли пароль?</b></string>
    <string name="LoginPageEnterText"><b>Войти</b></string>
    <string name="RegisterAndLoginPageRegisterText"><b>Создать аккаунт</b></string>
    <string name="LoginPageOr"><b>или</b></string>
    <string name="RegistePagreRegisterLabel"><b>Регистрация</b></string>
    <string name="RegisterPageEmail"><b>Почта</b></string>
    <string name="RegisterPageRegisterText2"><b>Создать</b></string>
    <string name="RegisterPageRepeatPass"><b>Повторите пароль</b></string>
    <string name="NewsPageTitle"><b>Новости и события</b></string>
    <string name="FavouritePageTitle"><b>Избранное</b></string>
    <string name="FavouritePagePlaces"><b>Места</b></string>
    <string name="FavouritePageTours"><b>Туры</b></string>
    <string name="MainMenuPageReadyTour"><b>Готовые туры</b></string>
    <string name="MainMenuPageAll"><b>Все</b></string>
    <string name="MainMenuPageNews"><b>Новости и события</b></string>
    <!-- Тянуть ID !--> <string name="first_card"><b>Исторический центр: тур по церквям</b></string> <!-- Тянуть ID !-->
    <!-- Тянуть ID !--> <string name="second_card"><b>Культурные центры Кургана</b></string> <!-- Тянуть ID !-->
    <!-- Тянуть ID !--> <string name="third_card"><b>Концерт в Филармонии: билеты раскуплены!</b></string> <!-- Тянуть ID !-->
    <string name="ListItemMainMenuButtonMoreNews"><b>Больше новостей</b></string>
    <string name="ProfilePageNameProfile"><b>Профиль</b></string>
    <string name="ProfilePageNameSettings"><b>Настройки</b></string>
    <string name="ObjectPageContacts">Контакты:</string>
    <string name="CreateTripPagePopular"><b>Популярное:</b></string>
    <string name="CreateTripPageCategories"><b>Категории:</b></string>
    <string name="CreateTripPageOwnTrip"><b>Собственный маршрут:</b></string>
    <!-- Тянуть ID !--><string name="chas">Часовня в честь Святой Троицы</string> <!-- Тянуть ID !-->
    <!-- Тянуть ID !--><string name="aleksandra_nevskogo">Приход Александра Невского</string> <!-- -->
    <!-- Тянуть ID !--><string name="name_placeholder">Дворец культуры машиностроителей</string>  <!-- -->
    <!-- Тянуть ID !--><string name="address_placeholder">Карла Маркса, 70</string> <!-- Тянуть ID !-->
    <!-- Тянуть ID !--><string name="categ_placeholder">Дома / Дворцы культуры</string>  <!-- Тянуть ID !-->
    <!-- Тянуть ID !--><string name="closed_text">Закрыто. Откроется завтра в %1$s</string> <!-- Тянуть ID !-->
    <!-- Тянуть ID !--><string name="working_hours_placeholder">Ежедневно с 9:00 до 18:00</string> <!-- Тянуть ID !-->
    <!-- Тянуть ID !--><string name="closed_until_placeholder">Закрыто до 9:00</string> <!-- Тянуть ID !-->
    <string name="NewsPageNews">Новости</string>
    <string name="NewsPageEvents">События</string>

    <string name="rating_format">%.1f</string>
    <string name="review_count_format">(%d)</string>


    <string name="tour_label"><b>Исторический центр: тур по церквям</b></string> <!-- Тянуть ID !-->
    <string name="tour_desc">Познакомьтесь с культовыми сооружениями, предназначенными для
    собрания прихожан, совершения богослужений и религиозных обрядов.</string> <!-- Тянуть ID !-->



    <!-- Strings used for fragments for navigation -->
    <string name="block"><b>1</b></string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="ProfilePagePhotoDescription">Фото профиля</string>
    <string name="ProfilePagePersonalDataButtonDescription">Личные данные</string>
    <string name="ProfilePagePrivacyButtonDescription">Конфиденциальность</string>
    <string name="ProfilePageFavoritesButtonDescription">Избранное</string>
    <string name="ProfilePageAssistanceButtonDescription">Помощь</string>
    <string name="ProfilePageAboutButtonDescription">О приложении</string>
    <string name="ProfilePageExitProfileButtonDescription">Выход из профиля</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>