<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/authorisation_backgroung_image1"


    android:orientation="vertical"
    tools:context=".pages.LoginPage"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-1dp">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60000000" />
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"


        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/kurgan1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/RegisterAndLoginPageLetsStart"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extrabold"
            android:gravity="center_horizontal"
            android:text="@string/RegisterAndLoginPageText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="360dp"
        android:background="@drawable/cropped_rectangle"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/RegistePagreRegisterLabel"
            android:textColor="#333333"
            android:textSize="30sp" />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                app:srcCompat="@drawable/rectangle_2" />

            <ImageView
                android:id="@+id/email_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_field"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/rectangle_2" />

            <ImageView
                android:id="@+id/password_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_field"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/rectangle_2" />
            <ImageView
                android:id="@+id/repeat_password_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_field"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/rectangle_2" />


            <Button
                android:id="@+id/do_Register"
                android:layout_width="320dp"
                android:layout_height="55dp"

                android:layout_below="@id/repeat_password_field"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_extrabold"

                android:onClick="onClickRegister"
                android:text="@string/RegisterPageRegisterText2"
                android:textSize="20sp"
                app:backgroundTint="#484C60" />




            <EditText
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/login_field"
                android:layout_alignStart="@id/login_field"
                android:layout_alignLeft="@id/login_field"
                android:layout_alignTop="@id/login_field"
                android:layout_alignEnd="@id/login_field"
                android:layout_alignRight="@id/login_field"
                android:layout_alignBottom="@id/login_field"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/LoginFieldLoginText"
                android:inputType="text" />
            <EditText
                android:id="@+id/email_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/email_field"
                android:layout_alignStart="@id/email_field"
                android:layout_alignLeft="@id/email_field"
                android:layout_alignTop="@id/email_field"
                android:layout_alignEnd="@id/email_field"
                android:layout_alignRight="@id/email_field"
                android:layout_alignBottom="@id/email_field"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/RegisterPageEmail"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/password_field"
                android:layout_alignStart="@id/password_field"
                android:layout_alignLeft="@id/password_field"
                android:layout_alignTop="@id/password_field"
                android:layout_alignEnd="@id/password_field"
                android:layout_alignRight="@id/password_field"
                android:layout_alignBottom="@id/password_field"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/RegisterAndLoginPagePasswordFieldText"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/repeat_pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/repeat_password_field"
                android:layout_alignStart="@id/repeat_password_field"
                android:layout_alignLeft="@id/repeat_password_field"
                android:layout_alignTop="@id/repeat_password_field"
                android:layout_alignEnd="@id/repeat_password_field"
                android:layout_alignRight="@id/repeat_password_field"
                android:layout_alignBottom="@id/repeat_password_field"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/RegisterPageRepeatPass"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>
        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>