<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pages.FavouritePage"
    android:background="#ffffff">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@id/title"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/FavouritePageTitle"
            android:textColor="#333333"
            android:textSize="30sp" />
        <ImageButton
            android:id="@+id/kurgan_logo"
            android:layout_width="63dp"
            android:layout_height="55dp"
            android:layout_toLeftOf="@id/title"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/kurgan_logo_icon"
            android:contentDescription="@string/block"
            android:onClick="onClickProfile" />
    </RelativeLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">


            <android.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/search"
                app:backgroundTint="#ffffff"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"/>

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                app:layout_scrollFlags="noScroll"
                app:tabRippleColor="@null"
                app:tabMode="fixed"
                app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
                app:tabIndicatorAnimationMode="linear"
                app:tabIndicatorColor="#08CC57"
                app:tabIndicatorHeight="5dp"
                app:tabSelectedTextColor="#000000"
                >
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FavouritePagePlaces"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FavouritePageTours"
                    />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:overScrollMode="never"
            android:background="#ffffff">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scrollbars="none"



                />
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>





</LinearLayout>